--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,9 +1,9 @@
 * {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
-  font-size: 3.7vw;
+  font-size: 4vw;
 }
 
 @media (min-width: 768px) {
@@ -22,7 +22,6 @@ body {
   margin: 0;
   color: #222;
   font-family: 'PT Mono', monospace;
-  font-weight: normal;
   font-kerning: normal;
   line-height: 1.8em;
   word-wrap: break-word;
@@ -54,6 +53,7 @@ h4,
 h5,
 h6 {
   font-size: inherit;
+  font-weight: inherit;
   line-height: inherit;
 }
 
